--- a/app/src/main/res/layout/activity_selelct.xml
+++ b/app/src/main/res/layout/activity_selelct.xml
@@ -7,54 +7,55 @@
     android:background="#EB6A6A">
 
 
-
     <ImageView
         android:id="@+id/select_layout_logo_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/login_layout_logo_img"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginBottom="8dp"
         android:layout_marginTop="60dp"
-        android:layout_marginRight="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/select_layout_myInfo_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.526"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="0dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/login_layout_logo_img" />
 
     <ImageButton
         android:id="@+id/select_layout_findFeedingRoom_imgButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
         android:background="#EB6A6A"
         app:layout_constraintEnd_toStartOf="@+id/select_layout_guide_imgButton"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/select_layout_baby_bottle_img"
-        tools:layout_editor_absoluteX="57dp"
-        tools:layout_editor_absoluteY="252dp" />
+        app:layout_constraintTop_toBottomOf="@+id/select_layout_logo_image"
+        app:srcCompat="@drawable/select_layout_baby_bottle_img" />
 
     <ImageButton
         android:id="@+id/select_layout_guide_imgButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:background="#EB6A6A"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/select_layout_findFeedingRoom_imgButton"
-        app:srcCompat="@drawable/select_layout_guide_book_img"
-        tools:layout_editor_absoluteX="209dp"
-        tools:layout_editor_absoluteY="252dp" />
+        app:layout_constraintTop_toTopOf="@+id/select_layout_findFeedingRoom_imgButton"
+        app:srcCompat="@drawable/select_layout_guide_book_img" />
 
     <Button
         android:id="@+id/select_layout_myInfo_button"
         android:layout_width="88dp"
         android:layout_height="wrap_content"
-        android:text="@string/myInfo_go_text"
+        android:layout_marginBottom="24dp"
         android:background="#B34141"
+        android:text="@string/myInfo_go_text"
         android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="406dp"
-        tools:layout_editor_absoluteX="136dp" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/select_layout_textView_find_feeding_room"
