--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -7,95 +7,78 @@
     android:background="#FFFFFF">
 
     <EditText
-        android:id="@+id/userinfo_layout_text_name"
-        android:layout_width="wrap_content"
+        android:id="@+id/emailJoin_layout_text_name"
+        android:layout_width="match_parent"
         android:layout_height="40dp"
+        android:layout_marginEnd="45dp"
+        android:layout_marginStart="16dp"
         android:background="@drawable/join_edittext_border"
         android:ems="15"
         android:hint="@string/email_input_text"
         android:inputType="textEmailAddress"
         android:singleLine="true"
-        android:layout_marginLeft="32dp"
-        android:layout_marginRight="32dp"
-        android:layout_marginTop="40dp"
+        app:layout_constraintBottom_toTopOf="@+id/emailJoin_layout_editText_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/userinfo_layout_text_age"
-        android:layout_width="wrap_content"
+        android:id="@+id/emailJoin_layout_editText_password"
+        android:layout_width="match_parent"
         android:layout_height="40dp"
+        android:layout_marginEnd="45dp"
+        android:layout_marginStart="16dp"
         android:background="@drawable/join_edittext_border"
         android:ems="15"
         android:hint="@string/password_input_text"
         android:inputType="textPassword"
-        android:layout_marginTop="24dp"
-        android:layout_marginRight="32dp"
-        android:layout_marginLeft="32dp"
-        app:layout_constraintEnd_toEndOf="@+id/userinfo_layout_text_name"
-        app:layout_constraintStart_toStartOf="@+id/userinfo_layout_text_name"
-        app:layout_constraintTop_toBottomOf="@+id/userinfo_layout_text_name"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.481" />
-
-    <Button
-        android:id="@+id/userinfo_layout_Button_infoOk_button"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:background="#EB6A6A"
-        android:text="@string/join_text"
-        android:textColor="#FFFFFF"
-        android:layout_marginTop="32dp"
+        app:layout_constraintBottom_toTopOf="@+id/emailJoin_layout_editText_passWordOk"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="35dp"
-        android:text="@string/duplication_button_text"
-        app:layout_constraintBottom_toBottomOf="@+id/userinfo_layout_text_name"
-        app:layout_constraintRight_toRightOf="@+id/userinfo_layout_text_name"
-        app:layout_constraintTop_toTopOf="@+id/userinfo_layout_text_name" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/validation_info_text"
-        android:textSize="11sp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintLeft_toLeftOf="@+id/editText"
-        app:layout_constraintTop_toBottomOf="@+id/editText"
-        tools:ignore="SmallSp" />
+        app:layout_constraintTop_toBottomOf="@+id/emailJoin_layout_text_name" />
 
     <EditText
-        android:id="@+id/editText"
-        android:layout_width="321dp"
-        android:layout_height="39dp"
+        android:id="@+id/emailJoin_layout_editText_passWordOk"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginEnd="45dp"
+        android:layout_marginStart="16dp"
         android:background="@drawable/join_edittext_border"
         android:ems="10"
         android:hint="@string/password_input_ok_text"
         android:inputType="textPassword"
-        android:layout_marginRight="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/userinfo_layout_text_age"
-        app:layout_constraintHorizontal_bias="0.521" />
+        app:layout_constraintBottom_toTopOf="@+id/emailJoin_infoTextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/emailJoin_layout_editText_password" />
 
+w
+    <Button
+        android:id="@+id/emailJoin_layout_Button_infoOk_button"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="166dp"
+        android:layout_marginStart="130dp"
+        android:background="#EB6A6A"
+        android:text="@string/join_text"
+        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/emailJoin_infoTextView" />
+
+    <TextView
+        android:id="@+id/emailJoin_infoTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="236dp"
+        android:layout_marginStart="16dp"
+        android:text="@string/validation_info_text"
+        android:textSize="11sp"
+        app:layout_constraintBottom_toTopOf="@+id/emailJoin_layout_Button_infoOk_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/emailJoin_layout_editText_passWordOk"
+        tools:ignore="SmallSp" />
 
 </android.support.constraint.ConstraintLayout>
