--- a/app/src/main/res/layout/activity_add_donor.xml
+++ b/app/src/main/res/layout/activity_add_donor.xml
@@ -10,56 +10,88 @@
         android:id="@+id/addDonor_layout_textView_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="163dp"
-        tools:layout_editor_absoluteY="16dp" />
+        android:text="기증자 신청"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toTopOf="@+id/addDonor_layout_editText_name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/addDonor_layout_editText_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
+        android:ems="15"
+        android:hint="이름을 입력해주세요"
         android:inputType="textPersonName"
-        android:text="Name"
-        tools:layout_editor_absoluteX="75dp"
-        tools:layout_editor_absoluteY="59dp" />
+        app:layout_constraintBottom_toTopOf="@+id/addDonor_layout_editText_residence"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/addDonor_layout_textView_title" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/addDonor_layout_editText_residence"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
+        android:ems="15"
+        android:hint="거주지를 입력해주세요(간단히)"
         android:inputType="textPersonName"
-        android:text="Name"
-        tools:layout_editor_absoluteX="67dp"
-        tools:layout_editor_absoluteY="127dp" />
+        app:layout_constraintBottom_toTopOf="@+id/addDonor_layout_editText_calving_date"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/addDonor_layout_editText_name" />
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/addDonor_layout_editText_calving_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name"
-        tools:layout_editor_absoluteX="67dp"
-        tools:layout_editor_absoluteY="188dp" />
+        android:ems="15"
+        android:hint="분만일을 입력해주세요"
+        android:inputType="date"
+        app:layout_constraintBottom_toTopOf="@+id/addDonor_layout_editText_email"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/addDonor_layout_editText_residence" />
 
     <EditText
-        android:id="@+id/editText6"
+        android:id="@+id/addDonor_layout_editText_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
+        android:ems="15"
+        android:hint="Email을 입력해주세요"
         android:inputType="textEmailAddress"
-        tools:layout_editor_absoluteX="67dp"
-        tools:layout_editor_absoluteY="249dp" />
+        app:layout_constraintBottom_toTopOf="@+id/addDonor_layout_editText_phoneNumber"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/addDonor_layout_editText_calving_date" />
 
     <EditText
-        android:id="@+id/editText7"
+        android:id="@+id/addDonor_layout_editText_phoneNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
+        android:ems="15"
+        android:hint="연락처를 입력해주세요"
         android:inputType="phone"
-        tools:layout_editor_absoluteX="59dp"
-        tools:layout_editor_absoluteY="314dp" />
+        app:layout_constraintBottom_toTopOf="@+id/addDonor_layout_button_nextButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/addDonor_layout_editText_email" />
+
+    <Button
+        android:id="@+id/addDonor_layout_button_nextButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="다음"
+        android:background="#B34141"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/addDonor_layout_editText_phoneNumber" />
 
 </android.support.constraint.ConstraintLayout>
